--- a/config.toml
+++ b/config.toml
@@ -11,13 +11,17 @@ languageCode = "zh-CN"
 defaultContentLanguage = "zh-cn"
 # language name ["English", "简体中文", "Français", "Polski", ...]
 languageName = "简体中文"
-
 # Author config
 [author]
   name = "nigo"
   email = "tujiabing81@163.com"
   link = ""
 
+[languages.zh-cn]
+  weight = 2
+  languageCode = "zh-CN"
+  languageName = "简体中文"
+  hasCJKLanguage = true
 # Menu config
 [menu]
   [[menu.main]]
